+ Updated mongoDB database name & IP.

--- a/SpringWithMongo/src/main/resources/general-test.properties
+++ b/SpringWithMongo/src/main/resources/general-test.properties
@@ -1,8 +1,6 @@
 #MongoDB information
-#AWS => ec2-54-152-190-116.compute-1.amazonaws.com
-#LOCAL[SIRISH PC] => 192.168.7.240
-MongoDB.hostName  =52.1.175.88
-MongoDB.dbName =alesco
+MongoDB.hostName  =127.0.0.1
+MongoDB.dbName =springmongo
 MongoDB.port =27017
 
 
